@@ -37,7 +37,8 @@ class ServerFixerTestCase(WerkzeugTestCase):
             PATH_INFO='/bar',
             SERVER_SOFTWARE='lighttpd/1.4.27'
         ))
-        assert response.data == b'PATH_INFO: /foo/bar\nSCRIPT_NAME: '
+        self.assert_equal(response.get_data(),
+                          b'PATH_INFO: /foo/bar\nSCRIPT_NAME: ')
 
     def test_cgi_root_fix_custom_app_root(self):
         app = fixers.CGIRootFix(path_check_app, app_root='/baz/poop/')
@@ -45,7 +46,7 @@ class ServerFixerTestCase(WerkzeugTestCase):
             SCRIPT_NAME='/foo',
             PATH_INFO='/bar'
         ))
-        assert response.data == b'PATH_INFO: /foo/bar\nSCRIPT_NAME: baz/poop'
+        self.assert_equal(response.get_data(), b'PATH_INFO: /foo/bar\nSCRIPT_NAME: baz/poop')
 
     def test_path_info_from_request_uri_fix(self):
         app = fixers.PathInfoFromRequestUriFix(path_check_app)
@@ -53,7 +54,7 @@ class ServerFixerTestCase(WerkzeugTestCase):
             env = dict(create_environ(), SCRIPT_NAME='/test', PATH_INFO='/?????')
             env[key] = '/test/foo%25bar?drop=this'
             response = Response.from_app(app, env)
-            assert response.data == b'PATH_INFO: /foo%bar\nSCRIPT_NAME: /test'
+            self.assert_equal(response.get_data(), b'PATH_INFO: /foo%bar\nSCRIPT_NAME: /test')
 
     def test_proxy_fix(self):
         @Request.application
@@ -74,7 +75,7 @@ class ServerFixerTestCase(WerkzeugTestCase):
 
         response = Response.from_app(app, environ)
 
-        assert response.data == b'1.2.3.4|example.com'
+        self.assert_equal(response.get_data(), b'1.2.3.4|example.com')
 
         # And we must check that if it is a redirection it is
         # correctly done:
@@ -96,7 +97,7 @@ class ServerFixerTestCase(WerkzeugTestCase):
         )
 
         response = Response.from_app(app, environ)
-        self.assert_strict_equal(response.data, b'127.0.0.1')
+        self.assert_strict_equal(response.get_data(), b'127.0.0.1')
 
     def test_header_rewriter_fix(self):
         @Request.application
@@ -128,7 +129,7 @@ class BrowserFixerTestCase(WerkzeugTestCase):
         ])
 
         # IE gets no vary
-        assert response.data == b'binary data here'
+        self.assert_equal(response.get_data(), b'binary data here')
         assert 'vary' not in response.headers
         assert response.headers['content-disposition'] == 'attachment; filename=foo.xls'
         assert response.headers['content-type'] == 'application/vnd.ms-excel'
@@ -136,7 +137,7 @@ class BrowserFixerTestCase(WerkzeugTestCase):
         # other browsers do
         c = Client(application, Response)
         response = c.get('/')
-        assert response.data == b'binary data here'
+        self.assert_equal(response.get_data(), b'binary data here')
         assert 'vary' in response.headers
 
         cc = ResponseCacheControl()
@@ -158,7 +159,7 @@ class BrowserFixerTestCase(WerkzeugTestCase):
         response = c.get('/', headers=[
             ('User-Agent', 'Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 6.0)')
         ])
-        assert response.data == b'binary data here'
+        self.assert_equal(response.get_data(), b'binary data here')
         assert 'pragma' not in response.headers
         assert 'cache-control' not in response.headers
         assert response.headers['content-disposition'] == 'attachment; filename=foo.xls'
@@ -169,21 +170,20 @@ class BrowserFixerTestCase(WerkzeugTestCase):
         response = c.get('/', headers=[
             ('User-Agent', 'Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 6.0)')
         ])
-        assert response.data == b'binary data here'
+        self.assert_equal(response.get_data(), b'binary data here')
         assert response.headers['pragma'] == 'x-foo'
         assert response.headers['cache-control'] == 'proxy-revalidate'
         assert response.headers['content-disposition'] == 'attachment; filename=foo.xls'
 
         # regular browsers get everything
         response = c.get('/')
-        assert response.data == b'binary data here'
+        self.assert_equal(response.get_data(), b'binary data here')
         assert response.headers['pragma'] == 'no-cache, x-foo'
         cc = parse_cache_control_header(response.headers['cache-control'],
                                         cls=ResponseCacheControl)
         assert cc.no_cache
         assert cc.proxy_revalidate
         assert response.headers['content-disposition'] == 'attachment; filename=foo.xls'
-
 
 
 def suite():
